# browser-recorder

./: .gitignore  README.md  pyproject.toml  record.py
